# SentinelVault

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  start-sentinelvault.sh  stop-sentinelvault.sh
.github/workflows/: ci.yml
app/: pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: AppDelegate.swift
app/lib/: app_shell.dart  main.dart
app/lib/theme/: theme.dart
app/test/: biometric_unlock_test.dart  duress_ui_test.dart  export_screen_test.dart  flutter_secure_storage_impl_test.dart  import_file_picker_test.dart  import_parsers_test.dart  item_types_roundtrip_test.dart  lock_flow_test.dart  login_form_test.dart  master_password_setup_test.dart  recovery_key_test.dart  route_guard_test.dart  shamir_recovery_ui_test.dart  sign_up_test.dart  unlock_screen_test.dart  widget_test.dart
app/web/: index.html
app/web/pkg/: crypto_core.d.ts  crypto_core.js  crypto_core_bg.wasm  crypto_core_bg.wasm.d.ts
backend/auth-service/: Dockerfile  package-lock.json  package.json
backend/auth-service/src/: app.module.ts  health.controller.ts  main.ts
backend/auth-service/test/: auth.integration-spec.ts  jwt-token.spec.ts  user-repository.spec.ts
backend/security-analysis-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/security-analysis-service/src/: app.module.ts  main.ts  rate-limiting.spec.ts
backend/sharing-service/: .dockerignore  Dockerfile  jest.config.json  package-lock.json  package.json  tsconfig.json
backend/sharing-service/src/: main.ts  sharing.module.ts
backend/sharing-service/test/: jwt-guard.spec.ts  sharing.service.spec.ts
backend/sync-api/: Dockerfile  package-lock.json  package.json
backend/sync-api/src/: app.module.ts  health.controller.ts  main.ts
backend/sync-api/test/: sync.integration-spec.ts
browser-extension/: pubspec.yaml
browser-extension/core-bundle/: core.js  core.js.deps  core.js.map
browser-extension/src/: manifest.json
browser-extension/src/background/: background.js
browser-extension/test/: autofill_test.js  native_messaging_test.dart
core/: analysis_options.yaml  pubspec.yaml
core/lib/: core.dart
core/test/: auth_client_login_test.dart  auth_client_test.dart  breach_monitor_test.dart  crypto_test.dart  duress_test.dart  email_scanner_test.dart  file_scanner_test.dart  hardware_key_unlock_test.dart  http_sync_api_client_test.dart  password_strength_test.dart  pqc_sharing_test.dart  shamir_recovery_test.dart  url_scanner_test.dart  vault_item_test.dart  vault_lock_manager_test.dart  vault_sync_test.dart
docs/: ARCHITECTURE.md  AUTH_AND_UNLOCK_FLOW.md  E2E_TEST_REPORT.md  FFI_CROSS_PLATFORM_PLAN.md  HARDWARE_KEY_UNLOCK_DESIGN.md  ITEM_SCHEMA_AND_UX.md  PHASE4_ADVANCED_FEATURES.md  PHASE5_ROADMAP.md  PQC_SHARING_DESIGN.md  RECOVERY_KEY_DESIGN.md  RUNNING_LOCALLY.md  RUST_CROSS_PLATFORM_REEVALUATION.md  alignment-audit.md
infra/: README.md  main.tf  outputs.tf  variables.tf
native/: build_wasm.sh
native/crypto_core/: Cargo.toml
native/crypto_core/src/: algorithms.rs  lib.rs  shamir.rs
native/crypto_core/src/algorithms/: pqc_hybrid.rs
native/crypto_core/src/secure_mem/: mod.rs  native.rs  wasm.rs
native/crypto_core/tests/: guard_pages_test.rs  integration_tests.rs
node_modules_old_auth/typeorm/: README.md  package.json
skills/: SKILL.md
skills/account-auth-flow/: SKILL.md
skills/ai-insights-generator/: SKILL.md
skills/browser-extension-core/: SKILL.md
skills/dark-web-monitor/: SKILL.md
skills/duress-decoy-vault/: SKILL.md
skills/emergency-kit-recovery/: SKILL.md
skills/fido2-webauthn-auth/: SKILL.md
skills/file-security-scan/: SKILL.md
skills/item-type-schema/: SKILL.md
skills/native-ffi-crypto-core/: SKILL.md
skills/native-secure-storage/: SKILL.md
skills/password-strength-analysis/: SKILL.md
skills/phishing-email-detection/: SKILL.md
skills/phishing-url-detection/: SKILL.md
skills/pqc-hybrid-sharing/: SKILL.md
skills/shamir-recovery-sharing/: SKILL.md
skills/vault-import-export/: SKILL.md
skills/vault-ui-navigation/: SKILL.md
skills/vault-unlock-flow/: SKILL.md
(+157 files in other folders)
