[package]
name = "crypto_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
argon2 = { version = "0.5.3", features = ["alloc"] }
aes-gcm = "0.10.3"
sha2 = "0.10.8"
num-bigint = "0.4.4"
num-traits = "0.2.19"
zeroize = { version = "1.7.0", features = ["derive"] }
rand = "0.8.5"
# Shamir's Secret Sharing over GF(256). Uses rand_chacha for polynomial coefficients
# and includes zeroize_memory to clear intermediate share data.
# NOTE: `sharks` v0.5.0 has not received a formal third-party security audit as of
# 2026-07. Evaluate vsss-rs if a published audit report becomes available before
# this feature ships to production.
sharks = { version = "0.5.0", features = ["zeroize_memory"] }
wasm-bindgen = { version = "0.2", optional = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"
ml-kem = { version = "0.2.0" }

ml-dsa = { version = "0.1.0", features = ["rand_core"] }
kem = "0.3.0-pre.0"
signature = "3.0"



[target.'cfg(unix)'.dependencies]
libc = "0.2.155"

# ── Wasm entropy source ───────────────────────────────────────────────────────
# Two incompatible major versions of getrandom coexist in the dependency tree:
#
#   • v0.2 – pulled by: rand 0.8, rand_core 0.6, argon2, aes-gcm, sharks, …
#             Wasm feature flag: "js"
#
#   • v0.4 – pulled by: ml-kem → rand_core 0.10, ml-dsa → rand_core 0.10, …
#             Wasm feature flag renamed to: "wasm_js"
#
# Both versions need their respective entropy-source feature activated when
# compiling for wasm32-unknown-unknown; without it they emit a compile_error.
# Cargo's package-rename syntax lets us list both major versions under
# different local names in the same [target] section so that feature
# unification propagates to every transitive dependent of each version.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom    = { package = "getrandom", version = "0.2", features = ["js"]      }
getrandom-v04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[features]
default = []
# Activates wasm-bindgen exports and ensures both getrandom flavours have
# their browser-entropy features enabled when building with --features wasm.
wasm = ["wasm-bindgen", "getrandom/js", "getrandom-v04/wasm_js"]

